<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="12dp"
    android:layout_margin="12dp"
    android:padding="10dp"
    android:id="@+id/song_card">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <ImageView
           android:id="@+id/song_image"
           android:layout_width="180dp"
           android:layout_height="200dp"
           android:contentDescription="@string/song_image"
           android:src="@drawable/default_background" />

       <TextView
           android:id="@+id/song_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/song_name"
           android:textSize="18sp"
           android:layout_margin="4dp"
           android:padding="2dp"
           android:textColor="@color/colorPrimary"/>

       <TextView
           android:id="@+id/artist_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/song_artist"
           android:textSize="12sp"
           android:layout_marginStart="4dp"
           android:layout_marginBottom="2dp"
           android:padding="2dp"
           android:textColor="@color/colorPrimary"/>

   </LinearLayout>






</androidx.cardview.widget.CardView>